force-app/main/default/objects/OutboundDefine__mdt/OutboundDefine__mdt.object-meta.xml
<CustomObject>
    <label>调用外部接口定义</label>
</CustomObject>