force-app/main/default/objects/OutboundDefine__mdt/fields/ApiId__c.field-meta.xml
<CustomField>
    <fullName>ApiId__c</fullName>
    <label>用户凭证</label>
    <length>255</length>
    <type>Text</type>
</CustomField>