force-app/main/default/objects/OutboundDefine__mdt/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <label>批次大小</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>