force-app/main/default/objects/OutboundDefine__mdt/fields/CalloutContentType__c.field-meta.xml
<CustomField>
    <fullName>CalloutContentType__c</fullName>
    <label>调用外部内容类型</label>
    <length>255</length>
    <type>Text</type>
</CustomField>