force-app/main/default/objects/OutboundDefine__mdt/fields/CalloutMethod__c.field-meta.xml
<CustomField>
    <fullName>CalloutMethod__c</fullName>
    <label>调用外部接口方式</label>
    <length>255</length>
    <type>Text</type>
</CustomField>