force-app/main/default/objects/OutboundDefine__mdt/fields/CalloutTimeout__c.field-meta.xml
<CustomField>
    <fullName>CalloutTimeout__c</fullName>
    <label>调用外部超时时间</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>