force-app/main/default/objects/OutboundDefine__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>APP栏目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>