force-app/main/default/objects/OutboundDefine__mdt/fields/EncodeKey__c.field-meta.xml
<CustomField>
    <fullName>EncodeKey__c</fullName>
    <label>加密/解密秘钥</label>
    <length>255</length>
    <type>Text</type>
</CustomField>