force-app/main/default/objects/OutboundDefine__mdt/fields/ExternalSystemName__c.field-meta.xml
<CustomField>
    <fullName>ExternalSystemName__c</fullName>
    <label>外部系统名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>