force-app/main/default/objects/OutboundDefine__mdt/fields/InterfaceName__c.field-meta.xml
<CustomField>
    <fullName>InterfaceName__c</fullName>
    <label>接口名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>