force-app/main/default/objects/OutboundDefine__mdt/fields/InterfaceType__c.field-meta.xml
<CustomField>
    <fullName>InterfaceType__c</fullName>
    <label>接口类型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REST</fullName>
                <default>true</default>
                <label>REST</label>
            </value>
            <value>
                <fullName>SOAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>