force-app/main/default/objects/OutboundDefine__mdt/fields/IsNeedRetry__c.field-meta.xml
<CustomField>
    <fullName>IsNeedRetry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>是否需要重试</label>
    <type>Checkbox</type>
</CustomField>