force-app/main/default/objects/OutboundDefine__mdt/fields/KeyID__c.field-meta.xml
<CustomField>
    <fullName>KeyID__c</fullName>
    <label>KeyID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>