force-app/main/default/objects/OutboundDefine__mdt/fields/KeySecret__c.field-meta.xml
<CustomField>
    <fullName>KeySecret__c</fullName>
    <label>KeySecret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>