force-app/main/default/objects/OutboundDefine__mdt/fields/LogExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>LogExpiryDate__c</fullName>
    <label>日志保留时间(天)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>