force-app/main/default/objects/OutboundDefine__mdt/fields/PassWord__c.field-meta.xml
<CustomField>
    <fullName>PassWord__c</fullName>
    <label>密码</label>
    <length>255</length>
    <type>Text</type>
</CustomField>