force-app/main/default/objects/OutboundDefine__mdt/fields/PlanningCycle__c.field-meta.xml
<CustomField>
    <fullName>PlanningCycle__c</fullName>
    <label>同步计划周期</label>
    <length>255</length>
    <type>Text</type>
</CustomField>