force-app/main/default/objects/OutboundDefine__mdt/fields/RetryCount__c.field-meta.xml
<CustomField>
    <fullName>RetryCount__c</fullName>
    <label>重试次数</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>