force-app/main/default/objects/OutboundDefine__mdt/fields/RetryInterval__c.field-meta.xml
<CustomField>
    <fullName>RetryInterval__c</fullName>
    <label>重试间隔时间(分钟)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>