force-app/main/default/objects/OutboundDefine__mdt/fields/ScheduleInterval__c.field-meta.xml
<CustomField>
    <fullName>ScheduleInterval__c</fullName>
    <label>定时任务间隔(小时)</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>