force-app/main/default/objects/OutboundDefine__mdt/fields/SignName__c.field-meta.xml
<CustomField>
    <fullName>SignName__c</fullName>
    <label>SignName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>