force-app/main/default/objects/OutboundDefine__mdt/fields/SucessFlag__c.field-meta.xml
<CustomField>
    <fullName>SucessFlag__c</fullName>
    <label>成功标识</label>
    <length>255</length>
    <type>Text</type>
</CustomField>