force-app/main/default/objects/OutboundDefine__mdt/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <label>接口地址</label>
    <length>255</length>
    <type>Text</type>
</CustomField>