force-app/main/default/objects/OutboundDefine__mdt/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <label>账号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>